# tmf_thiago_siqueira

./: .gitignore  Makefile  README.md  add_synthetic_cds_to_panel.py  app.py  main.py  post-pull.sh  pyproject.toml  requirements.txt  sparse-checkout  synthetic_cds_brl.py  wsgi.py
datos_y_modelos/Domestic/: domestic_sovereign_curve_brazil.xlsx  universo_brazil_deb_des.xlsx
datos_y_modelos/db/brazil_domestic_corp_bonds/: feriados_nacionais.xls
output/: Presentación del Trabajo Final de Maestría Economía UBA en.v6.pptx
referencias/: Guía para la elaboración del PROYECTO de TF de Maestría en Economía.docx  Guía para la elaboración del TF de Maestría v2024.docx  Resumen_Literatura_Tesis.xlsx
routes/: filters_routes.py
src/: config.py
src/calendars/: custom_date_types.py  daycounts.py
src/core/: curve_builder.py  spread_calculator.py  windowing.py
src/econometrics/: panel_main_and_robustness.do
src/finmath/SwapCurve/: SwapCurve.py
src/utils/: file_io.py  filters.py  interpolation.py  plotting.py
static/: spread_surface.html  summary_table.html
static/css/: main.css  style.css  summary.css  tables.css
static/js/: datatableFilter.js  exportTable.js  spread_table.js
templates/: filters.html  index.html  ipca_summary_full.html  ipca_summary_iframe.html  spread_embed.html  spread_iframe.html  summary_full.html  summary_iframe.html  surface_real_ipca.html
templates/shared/: base.html  nav_bar.html
tests/: conftest.py  manual_validation.py  test_di_surface_integrity.py  test_integration_pipeline.py  test_interpolation.py  test_spread_calculator.py
(+25 files in other folders)
