# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spread-model"
version = "0.1.0"
description = "Cálculo y visualización de spreads de bonos corporativos vs curva DI"
authors = [
    { name = "Thiago Siqueira", email = "tsiqueira@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "scipy>=1.7",
    "plotly>=5.10",
    "openpyxl>=3.0",
    "pytest>=6.0",
    "flask>=2.0",
    "matplotlib>=3.0",
    "XlsxWriter>=3.0.0",
    "tqdm>=4.66"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
